fix addressrep
